src/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

@font-face {
  font-family: "Avenir";
  src: url(./fonts/Avenir-Book.ttf);
  font-style: normal;
  font-weight: 300;
}
@font-face {
  font-family: "Avenir";
  src: url(./fonts/Avenir-Heavy.ttf);
  font-weight: bold;
}

body {
  margin: 0;
  padding: 0;
}

.wrapper {
  box-sizing: border-box;
  max-width: 100%;
  padding: 0 8px 10px;
}

.search-form {
  display: block;

  background: #fff;
  border: 1px solid #e1e7ed;
  box-shadow: 0 1px 8px rgba(61, 78, 97, 0.1);
  border-radius: 4px;
}

.search-form_large {
  margin-top: 20px;
  position: relative;
  padding: 23px 26px;
}

.search-form_small {
  margin-top: 20px;
  position: relative;
  padding: 10px 13px 11px;
}

.search-form_large::before {
  content: "";

  position: absolute;
  top: 32;
  left: 25px;

  width: 19px;
  height: 19px;

  background-image: url(./images/Search.svg);
}

.search-form_small::before {
  content: "";

  position: absolute;
  top: 14px;
  left: 12px;

  width: 11px;
  height: 11px;

  background-image: url(./images/Search.svg);
  background-size: contain;
}

.search-form_large:hover {
  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
}

.search-form_small:hover {
  box-shadow: 0 3px 8px rgba(61, 78, 97, 0.2);
}

.search-form_large:focus-within {
  filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
  background: linear-gradient(180deg, #fff 0%, #f6f6f7 100%);
  border: 1px solid #e1e7ed;
  border-radius: 3px;
}

.search-form_small:focus-within {
  background: linear-gradient(180deg, #fff 0%, #f6f6f7 100%);
  border: 1px solid #e1e7ed;
  border-radius: 3px;
}

.search-field {
  box-sizing: border-box;
  width: calc(100% - 1px);
  padding: 0;
  border: none;
  outline: none;
  background: transparent;
}

.search-field_large {
  margin-left: 36px;

  font-family: Avenir, sans-serif;
  font-size: 16px;
  line-height: 22px;
  font-weight: bold;
  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
  color: #3d4e61;
}

.search-field_large::placeholder {
  font-family: Avenir, sans-serif;
  font-size: 16px;
  line-height: 22px;
  font-weight: normal;
  text-shadow: none;
  color: #3d4e61;
}

.search-field_small {
  margin-left: 20px;

  font-family: Avenir, sans-serif;
  font-size: 14px;
  line-height: 19px;
  font-weight: bold;
  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
  color: #3d4e61;
}

.search-field_small::placeholder {
  font-family: Avenir, sans-serif;
  font-size: 14px;
  line-height: 19px;
  font-weight: normal;
  text-shadow: none;
  color: #3d4e61;
}

